# docai

./: .dockerignore  .env.example  .env.example.dev  .env.example.prod  .gitignore  Dockerfile  Makefile  README.md  authn.py  compose.prod.yml  compose.yml  config.py  init-letsencrypt.sh  main.py  project1.md  pyproject.toml  todo.md
.agents/rules/: prompt.md
backend/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  schemas.py
backend/auth/: __init__.py  cookies.py  dependencies.py  repository.py  routes.py  services.py  token_store.py  tokens.py
backend/db/: __init_.py  __init__.py  dependencies.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 62f12763d900_users_add_plan_storage.py  83da797488b8_create_users_table.py  9a6995dea22e_create_table_document_chunks.py  dfa47d9818c9_google_oauth.py
backend/guardrail/: llmGuard.py  pii_redact.py
backend/ingestion/: dependencies.py  repository.py  routes.py  services.py  storage.py  tasks.py  worker.py
backend/models/: document.py  llm_ouput.py  schemas.py
backend/query/: dependencies.py  routes.py  services.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/documents/: page.tsx
frontend/app/(app)/query/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/hooks/: useAuth.ts  useAuth.tsx  useDocuments.ts  useQuery.ts
frontend/lib/: api.ts  stream.ts  types.ts
nginx/: nginx.conf
tests/: test_script_for_s3.py
