[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "boto3>=1.43.36",
    "celery>=5.6.3",
    "docling>=2.110.0",
    "fastapi[standard]>=0.137.1",
    "fastembed>=0.8.0",
    "google-genai>=2.10.0",
    "make>=0.1.6.post2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-magic>=0.4.27",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]



