[project]
name = "docai-backend"
version = "0.1.0"
description = "rag for docs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobreaker>=1.2.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "boto3>=1.43.36",
    "celery>=5.6.3",
    "docling>=2.110.0",
    "fastapi[standard]>=0.137.1",
    "fastembed>=0.8.0",
    "google-genai>=2.10.0",
    "make>=0.1.6.post2",
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-magic>=0.4.27",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "sse-starlette>=3.4.5",
    "tenacity>=9.1.4",
    "torch",
    "torchvision",
    "opencv-python-headless",
    "logfire[asyncpg,celery,fastapi,httpx,redis]>=4.37.0",
]

[tool.uv]
override-dependencies = [
    "opencv-python; python_version < '0'"
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "onnxruntime>=1.27.0",
    "optimum[exporters,onnxruntime]>=2.1.0",
    "pre-commit>=4.6.0",
    "psutil>=7.2.2",
    "ruff>=0.15.17",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "transformers>=4.57.6",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }




